Modificado Formulario Nuevo Orden Servicio

--- a/Romsoft.GESTIONCLINICA.Presentacion/App.config
+++ b/Romsoft.GESTIONCLINICA.Presentacion/App.config
@@ -51,7 +51,7 @@
     <add key="WS_CVN_TARIFARIO_SEGUS_GetAllFilters" value="http://localhost:44390/api/CVN_TARIFARIO_SEGUS/GetAllFilters" />
     <add key="WS_CVN_TARIFARIO_SEGUS_GetAllActives" value="http://localhost:44390/api/CVN_TARIFARIO_SEGUS/GetAllActives" />
     <add key="WS_CVN_TARIFARIO_SEGUS_GetById" value="http://localhost:44390/api/CVN_TARIFARIO_SEGUS/GetById" />
-    
+    <add key="WS_CVN_TARIFARIO_SEGUS_GetPrice" value="http://localhost:44390/api/CVN_TARIFARIO_SEGUS/GetPrice" />
 
     <!--clasificacion Segus-->
     <add key="WS_CVN_CLASIFICACION_SEGUS_GetAllActives" value="http://localhost:44390/api/CVN_CLASIFICACION_SEGUS/GetAllActives" />
